manifest/nacos/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: infra
spec:
  serviceName: nacos-hs
  replicas: 3
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/name: nacos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nacos
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - worker-001
                - worker-002
                - worker-003
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nacos
          image: registry.cn-hangzhou.aliyuncs.com/devops-system/nacos-server:v3.0.3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 4
              memory: "8Gi"
            limits:
              cpu: 4
              memory: "8Gi"
          ports:
            - name: client-http
              containerPort: 8848
              protocol: TCP
            - name: client-rpc
              containerPort: 9848
            - name: raft-rpc
              containerPort: 9849
            - name: old-raft-rpc
              containerPort: 7848
            - name: console
              containerPort: 8080
              protocol: TCP
            - name: mcp
              containerPort: 9080
          startupProbe:
            initialDelaySeconds: 180
            periodSeconds: 5
            timeoutSeconds: 10
            httpGet:
              scheme: HTTP
              port: 8080
              path: /v3/console/health/readiness
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
            httpGet:
              scheme: HTTP
              port: 8080
              path: /v3/console/health/liveness
          volumeMounts:
            - name: data
              mountPath: /home/nacos/plugins/peer-finder
              subPath: peer-finder
            - name: data
              mountPath: /home/nacos/data
              subPath: data
            - name: data
              mountPath: /home/nacos/logs
              subPath: logs
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      storageClassName: nacos
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Gi
