manifest/nacos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-hs
  namespace: infra
  labels:
    app.kubernetes.io/name: nacos
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: client-http
      port: 8848
      targetPort: 8848
      protocol: TCP
    - name: client-rpc
      port: 9848
      targetPort: 9848
    - name: raft-rpc
      port: 9849
      targetPort: 9849
    - name: console
      port: 8080
      targetPort: 8080
    - name: mcp
      port: 9080
      targetPort: 9080
    ## 兼容1.4.x版本的选举端口
    - name: old-raft-rpc
      port: 7848
      targetPort: 7848
      protocol: TCP
  selector:
    app.kubernetes.io/name: nacos
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-cs
  namespace: infra
  labels:
    app.kubernetes.io/name: nacos
spec:
  type: ClusterIP
  ports:
    - name: client-http
      port: 8848
      targetPort: 8848
      protocol: TCP
    - name: client-rpc
      port: 9848
      targetPort: 9848
    - name: raft-rpc
      port: 9849
      targetPort: 9849
    - name: console
      port: 8080
      targetPort: 8080
    - name: mcp
      port: 9080
      targetPort: 9080
    ## 兼容1.4.x版本的选举端口
    - name: old-raft-rpc
      port: 7848
      targetPort: 7848
      protocol: TCP
  selector:
    app.kubernetes.io/name: nacos
