manifest/nacos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: nacos
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
  - host: nacos.kubeop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nacos-cs
            port:
              name: console
      - path: /nacos
        pathType: Prefix
        backend:
          service: 
            name: nacos-cs
            port:
              name: client-http
  tls:
    - hosts:
      - nacos.kubeop.com
      secretName: kubeop.com-ssl
